# Advanced-Social-Data-Science-2

./: .gitignore  pyproject.toml
1_Getting started/: ASDS2 Exercise 1.1 Regex Solutions.ipynb  ASDS2 Exercise 1.1.ipynb  ASDS2 Exercise 1.2 Preprocessing Solutions.ipynb  ASDS2 Exercise 1.2.ipynb
2_Discovery and Scaling/: ASDS2 Exercise 2.1 Solutions.ipynb  ASDS2 Exercise 2.1.ipynb  ASDS2 Exercise 2.2.ipynb  ASDS2 Exercise 2.3 Solutions.ipynb  ASDS2 Exercise 2.3.ipynb
3_Classification/: ASDS2 Exercise 3.1 Solutions.ipynb  ASDS2 Exercise 3.1.ipynb  ASDS2 Exercise 3.2 Solutions.ipynb  ASDS2 Exercise 3.2.ipynb
4_Neural networks/: 4.1 Shallow neural nets.pptx  4.2 Deep and sequential.pptx  ASDS2 Exercise 4.1 .ipynb  ASDS2 Exercise 4.1 Solutions.ipynb  ASDS2 Exercise 4.2 Solutions.ipynb  ASDS2 Exercise 4.2.ipynb  ASDS2 Exercise 4.3 Solutions.ipynb  ASDS2 Exercise 4.3.ipynb  [ASDS2] 03 DL I - PyTorch tutorial.ipynb  [ASDS2] 05 DL II - RNN tutorial.ipynb
5_Applications in natural language/: 5.1 Word embeddings.pptx  5.2 Sentence classification.pptx  ASDS2 Exercise 5.1 Solutions.ipynb  ASDS2 Exercise 5.1.ipynb  ASDS2 Exercise 5.2 Solutions .ipynb  ASDS2 Exercise 5.2.ipynb  [ASDS2] 04 DL I - Embeddings (tutorial).ipynb  climate_annotation.xlsx  irony_annotation.xlsx
Discovery and Scaling/: ASDS2 Exercise 1.1.ipynb  ASDS2 Exercise 1.3.ipynb  ASDS2 Exercise 2.2 Solutions.ipynb  ASDS2 Exercise 2.3 Solutions.ipynb
Getting started/: ASDS2 Exercise 1.1.ipynb  ASDS2 Exercise 1.2.ipynb
