[tool.poetry]
name = "social-visualization"
version = "0.1.0"
description = ""
authors = ["EsbenBL <53098504+EsbenBL@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "social_visualization"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.3"
ipykernel = "^6.20.2"
requests = "^2.28.2"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
seaborn = "^0.12.2"
datetime = "^5.0"
calplot = "^0.1.7.5"
plotly = "^5.13.0"
nbformat = "^5.7.3"
networkx = "^3.0"
geopandas = "^0.12.2"
folium = "^0.14.0"
dash = "^2.8.1"
powerlaw = "^1.5"
scikit-learn = "^1.2.1"
bokeh = "2.4.2"
sodapy = "^2.2.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
